--- a/style.css
+++ b/style.css
@@ -3,4 +3,15 @@
 	font-size: 24px;
 	color: mediumvioletred;
 	word-spacing: 4px;
+	width:300px;
+	border-radius: 40px;
+}
+
+.bastards:hover{
+	transform-origin: center center;
+	font-size: 50px;
+	transform: rotate(360deg);
+	transition-duration: 1s;
+	transition-timing-function: ease-in-out;
+		
 }
