--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .bastards {
+	display: inline-block;
 	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif";
 	font-size: 24px;
 	color: mediumvioletred;
