--- a/style.css
+++ b/style.css
@@ -5,14 +5,18 @@
 	color: mediumvioletred;
 	word-spacing: 4px;
 	width:500px;
-	border-radius: 40px;
+	border-radius: 100%;
+	padding: 0px 10px 0px 10px;
+	text-align: center
 }
 
 .bastards:hover{
 	transform-origin: center center;
 	font-size: 50px;
-	transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 	transition-duration: 1s;
 	transition-timing-function: ease-in-out;
 		
+
 }
